--- a/HOME.html
+++ b/HOME.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+<link rel="shortcut icon" type="image/x-icon" href="https://github.com/Genoyesil/genoyesil.github.io/blob/master/favicon.ico" />
 <title>Home</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 </head>
@@ -12,22 +12,22 @@
 			<a href="https://192.168.8.1/#!/login" target="SILA ROUTER"
 				onmouseover="window.status='SILA ROUTER';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img src="HOME_IMAGES/LoginButton.jpg" width="197" height="79" border="0" alt=""></a></td>
+				<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/LoginButton.jpg" width="197" height="79" border="0" alt=""></a></td>
 		<td rowspan="2">
-			<img src="HOME_IMAGES/HOME_02.jpg" width="1" height="768" alt=""></td>
+			<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/HOME_02.jpg" width="1" height="768" alt=""></td>
 		<td>
-			<a href="file:///C:/Users/Louis%20Harris/Desktop/Unofficial%20Website/SETUP_INSTRUTIONS.html"
+			<a href="https://github.com/Genoyesil/genoyesil.github.io/blob/master/SETUP_INSTRUTIONS.html"
 				onmouseover="window.status='Setup';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img src="HOME_IMAGES/SetupButton.jpg" width="203" height="79" border="0" alt=""></a></td>
+				<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/SetupButton.jpg" width="203" height="79" border="0" alt=""></a></td>
 		<td rowspan="2">
-			<img src="HOME_IMAGES/HOME_04.jpg" width="965" height="768" alt=""></td>
+			<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/HOME_04.jpg" width="965" height="768" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="HOME_IMAGES/HOME_05.jpg" width="197" height="689" alt=""></td>
+			<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/HOME_05.jpg" width="197" height="689" alt=""></td>
 		<td>
-			<img src="HOME_IMAGES/HOME_06.jpg" width="203" height="689" alt=""></td>
+			<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/HOME_IMAGES/HOME_06.jpg" width="203" height="689" alt=""></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
