--- a/SETUP_INSTRUTIONS.html
+++ b/SETUP_INSTRUTIONS.html
@@ -16,7 +16,7 @@
 		<td>
 			<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/SETUP_IMAGES/SETUP_INSTRUTIONS_02.jpg" width="1" height="76" alt=""></td>
 		<td>
-			<a href="https://github.com/Genoyesil/genoyesil.github.io/blob/master/HOME.html"
+			<a href="https://github.com/Genoyesil/genoyesil.github.io/blob/master/index.html"
 				onmouseover="window.status='Home';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="https://github.com/Genoyesil/genoyesil.github.io/tree/master/SETUP_IMAGES/HomeButton.jpg" width="203" height="76" border="0" alt=""></a></td>
