--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				onmouseout="window.status='';  return true;">
 				<img src="http://genoyesil.github.io/genoyesil.github.io/assets/HOME_IMAGES/SetupButton.jpg" width="203" height="79" border="0" alt=""></a></td>
 		<td rowspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/HOME_IMAGES/HOME_04.jpg" width="965" height="768" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/HOME_IMAGES/HOME_04.jpg" width="965" height="768" alt=""></td>
 	</tr>
 	<tr>
 		<td>
