--- a/SETUP_INSTRUTIONS.html
+++ b/SETUP_INSTRUTIONS.html
@@ -12,87 +12,87 @@
 			<a href="https://192.168.8.1/#!/login" target="SILA ROUTER"
 				onmouseover="window.status='SILA ROUTER';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/LoginButton.jpg" width="197" height="76" border="0" alt=""></a></td>
+				<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/LoginButton.jpg" width="197" height="76" border="0" alt=""></a></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_02.jpg" width="1" height="76" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_02.jpg" width="1" height="76" alt=""></td>
 		<td>
-			<a href="https://github.com/Genoyesil/genoyesil.github.io/blob/master/index.html"
+			<a href="http://genoyesil.github.io/genoyesil.github.io/index.html"
 				onmouseover="window.status='Home';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/HomeButton.jpg" width="203" height="76" border="0" alt=""></a></td>
+				<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/HomeButton.jpg" width="203" height="76" border="0" alt=""></a></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_04.jpg" width="965" height="76" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_04.jpg" width="965" height="76" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="76" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="76" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://192.168.8.1/#!/login" target="SILA ROUTER"
 				onmouseover="window.status='SILA ROUTER';  return true;"
 				onmouseout="window.status='';  return true;">
-				<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/LoginButton-06.jpg" width="2" height="3" border="0" alt=""></a></td>
+				<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/LoginButton-06.jpg" width="2" height="3" border="0" alt=""></a></td>
 		<td colspan="5" rowspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/GETTING-STARTED-SECTION.jpg" width="1364" height="749" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/GETTING-STARTED-SECTION.jpg" width="1364" height="749" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="3" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="3" alt=""></td>
 	</tr>
 	<tr>
 		<td rowspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_07.jpg" width="2" height="853" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_07.jpg" width="2" height="853" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="746" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="746" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="5">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_08.jpg" width="1364" height="107" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_08.jpg" width="1364" height="107" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="107" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="107" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="6">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/FINISHING-STEPS-SECTION.jpg" width="1366" height="1101" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/FINISHING-STEPS-SECTION.jpg" width="1366" height="1101" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="1101" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="1101" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="6">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/EXAMPLE-SECTION.jpg" width="1366" height="29" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/EXAMPLE-SECTION.jpg" width="1366" height="29" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="29" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="29" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/EXAMPLE-SECTION-12.jpg" width="10" height="902" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/EXAMPLE-SECTION-12.jpg" width="10" height="902" alt=""></td>
 		<td colspan="4" rowspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/EXAMPLE-SECTION-13.jpg" width="1356" height="940" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/EXAMPLE-SECTION-13.jpg" width="1356" height="940" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="902" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="902" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="2" rowspan="2">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_13.jpg" width="10" height="366" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_13.jpg" width="10" height="366" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="38" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="38" alt=""></td>
 	</tr>
 	<tr>
 		<td colspan="4">
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/SETUP_INSTRUTIONS_14.jpg" width="1356" height="328" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/SETUP_INSTRUTIONS_14.jpg" width="1356" height="328" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="328" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="328" alt=""></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="2" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="2" height="1" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="8" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="8" height="1" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="187" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="187" height="1" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="1" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="1" height="1" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="203" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="203" height="1" alt=""></td>
 		<td>
-			<img src="https://raw.githubusercontent.com/Genoyesil/genoyesil.github.io/master/SETUP_IMAGES/spacer.gif" width="965" height="1" alt=""></td>
+			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/SETUP_IMAGES/spacer.gif" width="965" height="1" alt=""></td>
 		<td></td>
 	</tr>
 </table>
