Update Page References

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<td rowspan="2">
 			<img src="http://genoyesil.github.io/genoyesil.github.io/assets/HOME_IMAGES/HOME_02.jpg" width="1" height="768" alt=""></td>
 		<td>
-			<a href="https://genoyesil.github.io/SETUP_INSTRUTIONS.html"
+			<a href="genoyesil.github.io/SETUP_INSTRUTIONS.html"
 				onmouseover="window.status='Setup';  return true;"
 				onmouseout="window.status='';  return true;">
 				<img src="http://genoyesil.github.io/genoyesil.github.io/assets/HOME_IMAGES/SetupButton.jpg" width="203" height="79" border="0" alt=""></a></td>
